# Poker-app-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: ci.yml
client/: README.md  pubspec.yaml
client/android/app/: build.gradle.kts
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/com/rebaubier/pokerblindtimer/poker_blind_timer/: MainActivity.kt
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/test/: widget_test.dart
docs/superpowers/plans/: 2026-04-20-crud-malettes-structures.md
docs/superpowers/specs/: 2026-04-20-crud-malettes-structures-design.md
migrations/: 0001_init.sql
server/src/: blind_timer.rs
src/: auth.rs  blind_timer.rs  error.rs  lib.rs  main.rs  malettes.rs  state.rs  structures.rs
tests/: api.rs
tests/common/: mod.rs
